# GenAI2OpenAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  test_tool_calling.py
genai_proxy/: __init__.py  app.py  auth.py  config.py  errors.py  logging_utils.py  token_usage.py
genai_proxy/compat/: __init__.py  claude.py  openai.py
genai_proxy/optimizations/: __init__.py  deepseek.py
genai_proxy/routes/: __init__.py  claude.py  openai.py
genai_proxy/services/: __init__.py  genai.py  models.py  token_manager.py
