[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=4.0.0",
    "requests>=2.32.5",
    "shanghaitech-ids-passkey>=0.1.0",
]

[tool.uv.sources]
shanghaitech-ids-passkey = { git = "https://github.com/vvbbnn00/shanghaitech-ids-passkey.git", branch = "main" }
